scooter/tests/snapshots/app_runner__search_fields_validation_errors_closed.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                               scooter                                              
    ┌Search text (Error: Couldn't parse regex)───────────────────────────────────────────────┐     
    │(                                                                                       │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Replace text────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌───┐                                                                                          
    │   │ Fixed strings                                                                            
    └───┘                                                                                          
    ┌───┐                                                                                          
    │   │ Match whole word                                                                         
    └───┘                                                                                          
    ┌───┐                                                                                          
    │ X │ Match case                                                                               
    └───┘                                                                                          
    ┌Files to include (Error: Couldn't parse glob pattern)───────────────────────────────────┐     
    │*, {                                                                                    │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Files to exclude (Error: Couldn't parse glob pattern)───────────────────────────────────┐     
    │{{                                                                                      │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
        <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit
