scooter/tests/snapshots/app_runner__search_results.snap
---
source: scooter/tests/app_runner.rs
expression: strip_time_taken(&snapshot)
---
                                                     Scooter                                                     
     ┌Search text────────────────────────────────────────────────────────────────────────────────────────┐      
     │let                                                                                                │      
     └───────────────────────────────────────────────────────────────────────────────────────────────────┘      
     ┌Replace text───────────────────────────────────────────────────────────────────────────────────────┐      
     │changed                                                                                            │      
     └───────────────────────────────────────────────────────────────────────────────────────────────────┘      
                                                                                                                
     Results: 9 [Search complete]                                                     [Time taken: x.xxxs]      
                                                                                                                
     [x] ./src/bar.rs:2                                                                                (1)      
     [x] ./src/foo.rs:2                                                                                (2)      
     [x] ./src/foo.rs:3                                                                                (3)      
     [x] ./src/foo.rs:4                                                                                (4)      
     [x] ./src/lib.rs:2                                                                                (5)      
                                                                                                                
       fn something() {                                                                                         
     -     let greeting = "Hello, world!";                                                                      
     +     changed greeting = "Hello, world!";                                                                  
           println!("{greeting}");                                                                              
       }                                                                                                        
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
                                                                                                                
       <space> toggle / <C-o> back to search fields / <enter> replace selected / <C-h> help / <esc> quit
