scooter/tests/snapshots/app_runner__search_text_empty_error.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot
---
                                               scooter                                              
    ┌Search text─────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Replace text────────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌───┐                                                                                          
    │   │ Fixed strings                                                                            
    └───┘                                                                                          
    ┌───┐                                                                                          
    │   │ Match whole word                                                                         
    └───┘                                                                                          
    ┌──┌──────────────────────────────────────Errors───────────────────────────────────────┐       
    │ X│ Search field must not be empty                                                    │       
    └──│ Please enter some search text                                                     │       
    ┌Fi└───────────────────────────────────────────────────────────────────────────────────┘─┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
    ┌Files to exclude────────────────────────────────────────────────────────────────────────┐     
    │                                                                                        │     
    └────────────────────────────────────────────────────────────────────────────────────────┘     
                                                                                                   
    Results: 0 [Search is empty]                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
                                                                                                   
        <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit
