scooter/tests/snapshots/app_runner__stdin_preview_escape_on_multiline_off.snap
---
source: scooter/tests/app_runner.rs
expression: snapshot.as_ref()
---
                                                                                scooter                                                                               
       ┌Search text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │world                                                                                                                                               │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
       ┌Replace text────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        
       │foo\nbar                                                                                                                                            │        
       └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        
                                                                                                                                                                     
       Results: 1 [Search complete]                                                                                                     [Time taken: TIME]         
                                                                                                                                                                     
       [x] stdin:1                                              (1) - hello world                                                                                    
                                                                    + hello foo                                                                                      
                                                                    + bar                                                                                            
                                                                      another line                                                                                   
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                  <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit
